--- a/package.json
+++ b/package.json
@@ -4,22 +4,10 @@
   "description": "template for my slides",
   "main": "index.js",
   "scripts": {
-    "present": "node scripts/scribe.js"
+    "present": "scribe"
   },
   "private": true,
-  "dependencies": {
-    "asciidoctor-reveal.js": "2.0.1",
-    "asciidoctor.js": "1.5.9",
-    "fs-extra": "9.0.0"
-  },
   "devDependencies": {
-    "@types/node": "13.11.0",
-    "browser-sync": "2.26.7",
-    "chokidar": "3.3.1",
-    "opener": "1.5.1"
-  },
-  "volta": {
-    "node": "10.16.3",
-    "yarn": "1.17.3"
+    "@signed/scribe": "0.1.0"
   }
 }
